sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: not found: value blol
                         for(b<-pivot to lgr-2){blol=getValeur(b)
                                                ^AlgSelectionSort:7: error: not found: value blol
                                               if(blol<amin){a=b}}
                                                  ^AlgSelectionSort:7: error: reassignment to val
                                               if(blol<amin){a=b}}
                                                              ^AlgSelectionSort:8: error: not found: value b
                         echange(a,b)}
                                   ^